# loco-platform

./: .clippy.toml  .env.example  .gitignore  .markdownlint.json  .pre-commit-config.yaml  .yamllint.yml  CLAUDE.md  Cargo.toml  Dioxus.toml  README.md  RUN_SCRIPTS.md  SETUP.md  UI-COMPARISON.md  backend-demo.py  checklist.md  debug_test.js  fix_server.py  leptosvsdioxus.md  package-lock.json  package.json  playwright-test.spec.ts  progress-report-2025-06-09.md  routing-test.html  run  run-dev  run-direct  run-leptos.sh  run-simple  run-static  run.ps1  run_frontend.sh  rustfmt.toml  serve.py  setup-alias.sh  simple_backend.py  test-pages.js  x-map.md
.cargo/: config.toml
.claude/: settings.local.json
.githooks/: commit-msg  pre-commit  pre-push
app/: Cargo.toml  Trunk.toml  index.html
app/src/: app.rs  config.rs  lib.rs  lib_broken.rs  lib_complex.rs  lib_simple.rs  main.rs  minimal_app.rs  modern_app.rs  production_app.rs  simple_app.rs  working_app.rs
app/src/api/: applications.rs  auth.rs  client.rs  client_simple.rs  jobs.rs  mod.rs  supabase.rs
app/src/auth/: auth_guard.rs  forgot_password.rs  login.rs  login_modern.rs  mod.rs  register.rs
app/src/components/: advanced_filters.rs  analytics_dashboard.rs  application_board.rs  breadcrumb.rs  calendar_system.rs  card.rs  error_boundary.rs  forms.rs  header.rs  job_card.rs  job_creation_wizard.rs  mapbox.rs  mod.rs  modal.rs  modern_ui.rs  search_bar.rs  sidebar.rs  skeleton.rs  ui.rs
app/src/contexts/: auth_context.rs  mod.rs  theme_context.rs
app/src/modern_app/components/: button.rs  card.rs  header.rs  mod.rs  sidebar.rs
app/src/modern_app/pages/: login.rs  mod.rs
app/src/pages/: admin.rs  applications.rs  availability.rs  create_job.rs  dashboard.rs  home.rs  job_detail.rs  jobs.rs  map.rs  map_enhanced.rs  mod.rs  not_found.rs  profile.rs  settings.rs  simple_admin.rs  simple_dashboard.rs  simple_jobs.rs  simple_map.rs  simple_profile.rs  team.rs
app/src/providers/: auth_provider.rs  mod.rs  tenant_provider.rs  theme_provider.rs
app/src/theme/: mod.rs  theme_context.rs  theme_provider.rs  theme_toggle.rs
app/src/utils/: mod.rs
app/tests/: comprehensive-test.spec.ts  quick-test.spec.ts
backend/: Cargo.toml
backend/src/: config.rs  database.rs  db.rs  error.rs  main.rs
backend/src/entities/: application.rs  job.rs  mod.rs  session.rs  tenant_users.rs  tenants.rs  user.rs
backend/src/handlers/: applications.rs  auth.rs  enhanced_jobs.rs  health.rs  jobs.rs  local_auth.rs  mod.rs  search.rs  users.rs  websocket.rs
backend/src/middleware/: auth.rs  cors.rs  jwt_auth.rs  logging.rs  mod.rs  rbac.rs  supabase_auth.rs  validation.rs
backend/src/models/: application.rs  job.rs  mod.rs  user.rs
backend/src/repository/: application_repository.rs  job_repository.rs  mod.rs  session_repository.rs  user_repository.rs
backend/src/services/: application_service.rs  auth_service.rs  enhanced_job_service.rs  enhanced_job_service_backup.rs  job_service.rs  location_service.rs  mod.rs  search_service.rs  supabase_auth.rs  user_service.rs
docs/: CROSS_COMPILATION.md  authentication-guide.md
draft/: admin.html  create-job.html  map.html  (+13 more)
frontend/: Cargo.toml  package-lock.json  package.json  tailwind.config.js
frontend/assets/: global.css  input.css  map-styles.css  output.css
frontend/src/: hooks.rs  main.rs  services.rs  state.rs  utils.rs
frontend/src/components/: job_card.rs  job_list.rs  layout.rs  map.rs  mod.rs  router.rs  search_bar.rs  sidebar.rs  ui.rs
frontend/src/pages/: home.rs  jobs.rs  map.rs  map_broken.rs  map_comprehensive.rs  map_simple.rs  mod.rs
shared/: Cargo.toml
shared/src/: db.rs  errors.rs  lib.rs  supabase.rs  types.rs  utils.rs  validation.rs
shared/src/locations/: job_location_fixer.rs  mod.rs  suburb_coordinates.rs
tests/: Cargo.toml  README.md  run-tests.sh  test-config.toml
tests/e2e/: package-lock.json  package.json  playwright.config.js  test-report.md  test-results.json
tests/e2e/playwright-report/: index.html
tests/e2e/specs/: comprehensive-ui-test.spec.js  comprehensive.spec.js  diagnostic-test.spec.js  form-labels-test.spec.js  jobs.spec.js  map.spec.js  navigation.spec.js  performance.spec.js  quick-test.spec.js  sidebar.spec.js
tests/e2e/test-results/: .last-run.json
tests/e2e/test-results/comprehensive-Comprehensiv-36e28-ney-through-the-application-chromium/: error-context.md  video.webm
tests/e2e/test-results/comprehensive-Comprehensiv-5a63e-ive-design-across-all-pages-chromium/: video.webm
tests/e2e/test-results/comprehensive-Comprehensiv-7e150--integration-with-mock-data-chromium/: error-context.md  video.webm
tests/e2e/test-results/map-Map-Page-Map-page-renders-correctly-chromium/: error-context.md  video.webm
tests/e2e/test-results/map-Map-Page-Mapbox-integration-loads-chromium/: error-context.md  video.webm
tests/e2e/test-results/map-Map-Page-Mobile-responsive-design-chromium/: error-context.md  video.webm
tests/e2e/test-results/navigation-Page-Navigation-4abba-ity-page-loads-successfully-chromium/: error-context.md  video.webm
tests/e2e/test-results/navigation-Page-Navigation-858f3-ons-page-loads-successfully-chromium/: error-context.md  video.webm
tests/e2e/test-results/navigation-Page-Navigation-Admin-page-loads-successfully-chromium/: error-context.md  video.webm
tests/e2e/test-results/navigation-Page-Navigation-Connect-page-loads-successfully-chromium/: error-context.md  video.webm
tests/e2e/test-results/navigation-Page-Navigation-Forum-page-loads-successfully-chromium/: error-context.md  video.webm
tests/e2e/test-results/navigation-Page-Navigation-Jobs-page-loads-successfully-chromium/: error-context.md  video.webm
tests/e2e/test-results/navigation-Page-Navigation-Map-page-loads-successfully-chromium/: error-context.md  video.webm
tests/e2e/test-results/navigation-Page-Navigation-Profile-page-loads-successfully-chromium/: error-context.md  video.webm
tests/e2e/utils/: test-helpers.js
tests/src/: fixtures.rs  lib.rs  utils.rs
tests/tests/: e2e_tests.rs  integration_tests.rs  wasm_tests.rs
(+54 files in other folders)
