[workspace]
members = [
    "frontend",
    "backend", 
    "shared",
    "migrations"
]
resolver = "2"

[workspace.dependencies]
# Shared dependencies across workspace
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4", "serde", "js"] }
thiserror = "1.0"
anyhow = "1.0"
tokio = { version = "1.0", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.3"
validator = { version = "0.18", features = ["derive"] }

# Frontend specific
dioxus = { version = "0.5", features = ["web", "router"] }
dioxus-helmet = "0.2"
fermi = "0.4"
gloo = "0.10"
wasm-bindgen = "0.2"
web-sys = "0.3"
js-sys = "0.3"
reqwest = { version = "0.11", features = ["json"] }
getrandom = { version = "0.2", features = ["js"] }

# Backend specific  
axum = { version = "0.7", features = ["ws", "multipart"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace", "fs"] }
sea-orm = { version = "0.12", features = ["sqlx-postgres", "runtime-tokio-rustls", "macros"] }
sqlx = { version = "0.7", features = ["postgres", "runtime-tokio-rustls", "chrono", "uuid"] }
argon2 = "0.5"
jsonwebtoken = "9.2"
lettre = "0.11"

# Additional workspace dependencies
async-trait = "0.1"
url = "2.4"
rand = "0.8"
rust_decimal = "1.37"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"

[profile.dev]
opt-level = 0
debug = true
incremental = true

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"
