[workspace]
members = [
    "app",        # Leptos SSR app (replaces frontend)
    "backend",    # API backend with multi-tenancy
    "shared",     # Shared types and utilities
    "migrations", # Database migrations
    "tests"       # Rust-native testing suite
]
resolver = "2"

[workspace.dependencies]
# Leptos framework - Fine-grained reactive framework with SSR
leptos = { version = "0.8.2", features = ["csr"] }
leptos_meta = "0.8.2"
leptos_router = "0.8.2"

# Shared dependencies
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4", "serde", "js"] }
thiserror = "1.0"
anyhow = "1.0"
tokio = { version = "1.35", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.3"
validator = { version = "0.18", features = ["derive"] }

# Supabase integration
postgrest = "1.6"

# WASM dependencies
wasm-bindgen = "0.2.97"
web-sys = "0.3.74"
js-sys = "0.3.74"
getrandom = { version = "0.2", features = ["js"] }
console_error_panic_hook = "0.1"

# HTTP client
reqwest = { version = "0.11", features = ["json", "rustls-tls"] }
gloo-net = "0.5"

# Backend specific  
axum = { version = "0.7", features = ["ws", "multipart", "macros"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace", "fs", "timeout", "limit", "compression-gzip"] }
sea-orm = { version = "0.12", features = ["sqlx-postgres", "runtime-tokio-rustls", "macros"] }
sqlx = { version = "0.7", features = ["postgres", "runtime-tokio-rustls", "chrono", "uuid"] }
argon2 = "0.5"
jsonwebtoken = "9.2"
lettre = "0.11"

# Additional dependencies
async-trait = "0.1"
url = "2.5"
rand = "0.8"
rust_decimal = "1.37"

# Testing dependencies
fantoccini = "0.19"
wasm-bindgen-test = "0.3"
tokio-test = "0.4"
futures = "0.3"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"

[profile.dev]
opt-level = 0
debug = true
incremental = true

[profile.wasm-dev]
inherits = "dev"
opt-level = 1
lto = "off"  # Disable LTO for WASM dev builds

[profile.wasm-release]
inherits = "release"
lto = "thin"  # Use thin LTO for WASM compatibility
panic = "abort"

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"
