[package]
name = "loco-app"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "loco-app"
path = "src/main.rs"

[dependencies]
leptos = { workspace = true }
leptos_meta = { workspace = true }
leptos_router = { workspace = true }

# Core dependencies
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }

# Advanced features
# leptos-use = "0.10"  # Temporarily removed due to compatibility issues

# Shared types
shared = { path = "../shared" }

# HTTP client
gloo-net = { workspace = true }
gloo-timers = { version = "0.3", features = ["futures"] }
reqwest = { workspace = true }

# WASM specific
wasm-bindgen = { workspace = true }
web-sys = { workspace = true, features = [
    "Window", "Document", "Element", "HtmlElement", "Node",
    "Navigator", "Geolocation", "Storage", "Location", "History",
    "CustomEvent", "DomRect", "DomTokenList", "MediaQueryList",
    "DataTransfer", "DragEvent", "File", "FileList", "FileReader",
    "HtmlScriptElement", "HtmlDivElement", "CssStyleDeclaration",
    "EventTarget", "Event", "MouseEvent", "HtmlLinkElement",
    "HtmlInputElement", "HtmlTextAreaElement", "HtmlSelectElement",
    "HtmlFormElement", "FormData", "Headers", "Request", "RequestInit",
    "Response", "ResponseInit"
]}
js-sys = { workspace = true }
getrandom = { workspace = true }
console_error_panic_hook = { workspace = true }
gloo-console = "0.3"
gloo-utils = "0.2"
futures = "0.3"
serde-wasm-bindgen = "0.6"

# Supabase client
postgrest = { workspace = true }

# Additional utilities
once_cell = "1.19"

# SSR dependencies
axum = { workspace = true, optional = true }
tokio = { workspace = true, optional = true }
tower = { workspace = true, optional = true }
tower-http = { workspace = true, features = ["fs"], optional = true }

[features]
default = ["csr"]
csr = ["leptos/csr"]
hydrate = ["leptos/hydrate"]
ssr = ["leptos/ssr", "axum", "tokio", "tower", "tower-http"]

# Target-specific dependencies
[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen-futures = "0.4.47"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tokio = { workspace = true, features = ["full"] }
axum = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
dotenv = "0.15"

[package.metadata.leptos]
# The site root folder
site-root = "target/site"
# The site pkg folder
site-pkg-dir = "pkg"
# Assets source dir
assets-dir = "assets"
# JS output dir
site-addr = "127.0.0.1:3080"
reload-port = 3002
browserquery = "defaults"
watch = false
env = "DEV"
bin-features = ["ssr"]
bin-default-features = false
lib-features = ["hydrate"]
lib-default-features = false