[package]
name = "shared"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
thiserror = { workspace = true }

# For validation
validator = { version = "0.18", features = ["derive"] }

# For geographic operations
geo = "0.28"