[package]
name = "shared"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
thiserror = { workspace = true }

# For validation
validator = { version = "0.18", features = ["derive"] }

# For geographic operations
geo = "0.28"

# For static lazy initialization
once_cell = "1.19"

# For database transactions (optional)
sea-orm = { version = "0.12", optional = true }
tokio = { version = "1.42", features = ["time"], optional = true }
tracing = { version = "0.1", optional = true }

[features]
default = []
db = ["sea-orm", "tokio", "tracing"]